# LifeRestartPy

./: .gitignore  README.md  pyproject.toml
liferestart/: __init__.py  __main__.py  condition.py  config.py
liferestart/data/: __init__.py  events.json
liferestart/struct/: character.py  talent.py
tests/: __init__.py  test_condition.py
